--- a/example/index.html
+++ b/example/index.html
@@ -4,14 +4,29 @@
         <style>
             main {
                 background: #333;
-                width: 600px;
-                height: 400px;
+                position: relative;
+            }
+            main video {
+                width: 100%;
+                height: auto;
+            }
+            main .barrage {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                pointer-events: none;
             }
         </style>
     </head>
 
     <body>
-        <main></main>
+        <main>
+            <video src="./sample.mp4" controls></video>
+            <div class="barrage"></div>
+        </main>
+        <input type="text" placeholder="Barrage">
         <script src="../dist/index.js"></script>
     </body>
 </html>
