--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
             <video src="./sample.mp4" controls></video>
             <div class="barrage"></div>
         </main>
-        <input type="text" placeholder="Barrage">
+        <input type="text" placeholder="Barrage" id="send">
         <script src="../dist/index.js"></script>
     </body>
 </html>
